client-side/src/app/components/section/section.component.scss
.remote-loader-container {
    pointer-events: none;
    opacity: 0.5;
}

@mixin block-editor-toolbar() {
    position: relative;
    top: calc(50%);
    left: 50%;
    max-width: 240px;
    transform: translate(-50%, 50%);
    z-index: 2;
    margin-top: -2.5rem;
}

.section-container {
    position: relative;
    display: grid;
    border: 1px solid #999999;
    border-radius: 0.25rem;
    min-height: 250px;
    background-color: #fff;

    .cdk-drag-placeholder {
        opacity: 0;
    }

    .section-toolbar {
        position: absolute;
        top: -1px;
        left: -1px;
        width: calc(100% + 2px);
    }

    .block-toolbar {
        @include block-editor-toolbar();
    }

    .section-background {
        position: absolute;
        width: 100%;
        height: 100%;
        z-index: -1;

        .back-template {
            width: 8.3333%;
            height: 100%;
            background-color: #BEC3E5;
            z-index: -100;
            opacity: 0.1;
            border-right: 2px dashed #000;
            float: left;

            &:last-of-type {
                border-right: 0 none;
            }
        }
    }

    .blocks-wrapper {
        min-height: 250px;
        display: grid;
        grid-auto-flow: column;

        &.active {
            border: 2px dashed #000;
            border-top: 0;
        }
    }

    &.active-section {
        border: 2px dashed #000;
        z-index: 11;
    }

    .active-block{
        border: 2px dashed #000;
        z-index: 11;
        position: relative;

        .block-editable-state{
            opacity: 1;
        }
   }
}

.cdk-drag-preview {
    box-sizing: border-box;
    border-radius: 4px;
    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
      0 8px 10px 1px rgba(0, 0, 0, 0.14),
      0 3px 14px 2px rgba(0, 0, 0, 0.12);

    .block-toolbar {
        @include block-editor-toolbar();
    }
}

// .cdk-drag-placeholder {
//     opacity: 0;
//     // background-color: red;
// }

.cdk-drag-animating {
    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
}

